Fixed Boder overlay (.centered_boder) fontsize on large monitors (was causing clipping)

--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -612,6 +612,10 @@ footer h5 {
     #google-maps{
         padding:15px;
     }
+
+    .centered_boder {
+        font-size: 2.2vw;
+    }
 }
 
 /*@media (min-width:1281px) { !* hi-res laptops and desktops *! }*/
